[gd_scene load_steps=4 format=3 uid="uid://ha437jpjy64r"]

[ext_resource type="Script" path="res://assets/doors/door.gd" id="1_15lx5"]
[ext_resource type="Texture2D" uid="uid://b0fpw7ag8nel3" path="res://assets/doors/open_door.webp" id="1_877jl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nnrho"]
size = Vector2(58, 61)

[node name="Door" type="Area2D"]
script = ExtResource("1_15lx5")

[node name="DoorImage" type="Sprite2D" parent="."]
texture = ExtResource("1_877jl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_nnrho")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
